Table User {
  id int [pk, increment]
  email varchar [not null, unique]
  password varchar [not null]
  full_name varchar [note: "Optional"]
  is_active bool
  is_staff bool
  is_verified bool
  created_at datetime
  updated_at datetime
}

Enum Role {
  Admin
  Manager
  Member
  Viewer
}

Enum InvitationStatus {
  pending
  accepted
  rejected
  cancelled
}

Enum NotificationType {
  TASK_ASSIGNED
  COMMENT_ADDED
  STATUS_CHANGED
  MENTION
}

Table Workspace {
  id int [pk, increment]
  owner_id int [not null, ref: > User.id]
  title varchar(250) [not null]
  slug varchar [not null, unique]
  created_at datetime
  updated_at datetime
}

Table Membership {
  id int [pk, increment]
  user_id int [not null, ref: > User.id]
  workspace_id int [not null, ref: > Workspace.id]
  role Role
  joined_at datetime

  indexes {
    (user_id, workspace_id) [unique]
  }
}

Table WorkspaceInvitation {
  id int [pk, increment]
  invited_by_id int [not null, ref: > User.id]
  workspace_id int [not null, ref: > Workspace.id]
  user_id int [not null, ref: > User.id]
  role Role
  status InvitationStatus
  created_at datetime

  indexes {
    (user_id, workspace_id) [name: "unique_pending_invitation"]
  }
}

Table Workflow {
  id int [pk, increment]
  workspace_id int [not null]
  name varchar [not null]

  indexes {
    (workspace_id, name) [unique]
  }
}

Ref: Workflow.workspace_id > Workspace.id

Table Project {
  id int [pk, increment]
  workspace_id int [not null]
  workflow_id int [not null]
  name varchar [not null]
  description varchar
  start_date datetime
  end_date datetime
  created_at datetime
  updated_at datetime
  is_archived bool

  indexes {
    (workspace_id, name) [unique]
  }
}

Ref: Project.workspace_id > Workspace.id
Ref: Project.workflow_id > Workflow.id

Table WorkflowStatus {
  id int [pk, increment]
  workflow_id int [not null]
  status_id int [not null]
  order int [not null]

  indexes {
    (workflow_id, order) [unique]
  }
}

Ref: WorkflowStatus.workflow_id > Workflow.id
Ref: WorkflowStatus.status_id > Status.id

Table Sprint {
  id int [pk, increment]
  project_id int [not null]
  name varchar [not null]
  start_date datetime
  end_date datetime
  goal varchar

  indexes {
    (project_id, name) [unique]
  }
}

Ref: Sprint.project_id > Project.id

Table Status {
  id int [pk, increment]
  name varchar [not null]
}

Table Priority {
  id int [pk, increment]
  title varchar [not null]
  level int
}

Table Task {
  id int [pk, increment]
  project_id int [not null]
  title varchar [not null]
  description varchar
  status_id int [not null]
  priority_id int [not null]
  created_by int [not null]
  assigned_to int
  position int
  created_at datetime
  updated_at datetime
  due_date datetime
  estimate_minutes int
  sprint_id int
}

Ref: Task.project_id > Project.id
Ref: Task.status_id > Status.id
Ref: Task.priority_id > Priority.id
Ref: Task.created_by > User.id
Ref: Task.assigned_to > User.id
Ref: Task.sprint_id > Sprint.id

Table Label {
  id int [pk, increment]
  name varchar [not null]
  workspace_id int [not null]
  color varchar
  created_at datetime

  indexes {
    (workspace_id, name) [unique]
  }
}

Ref: Label.workspace_id > Workspace.id

Table TaskLabel {
  id int [pk, increment]
  added_by int [not null]
  label_id int [not null]
  task_id int [not null]

  indexes {
    (task_id, label_id) [unique]
  }
}

Ref: TaskLabel.added_by > User.id
Ref: TaskLabel.label_id > Label.id
Ref: TaskLabel.task_id > Task.id

Table Comment {
  id int [pk, increment]
  task_id int [not null]
  parent_id int
  user_id int [not null]
  content varchar
  created_at datetime
}

Ref: Comment.task_id > Task.id
Ref: Comment.parent_id > Comment.id
Ref: Comment.user_id > User.id

Table Notification {
  id int [pk, increment]
  type NotificationType
  user_id int [not null]
  title varchar
  message varchar
  data json
  read_at datetime
  created_at datetime
  sender_id int [not null]
}

Ref: Notification.user_id > User.id
Ref: Notification.sender_id > User.id

Table ActivityLog {
  id int [pk, increment]
  task_id int [not null]
  user_id int [not null]
  action varchar
  old_value varchar
  new_value varchar
  created_at datetime
}

Ref: ActivityLog.task_id > Task.id
Ref: ActivityLog.user_id > User.id

Table Attachment {
  id int [pk, increment]
  task_id int [not null]
  file_path varchar
  file_size bigint
  mime_type varchar
  uploaded_by int [not null]
  created_at datetime
}

Ref: Attachment.task_id > Task.id
Ref: Attachment.uploaded_by > User.id

Table TaskStatusHistory {
  id int [pk, increment]
  task_id int [not null]
  from_status_id int [not null]
  to_status_id int [not null]
  changed_by int [not null]
  created_at datetime
}

Ref: TaskStatusHistory.task_id > Task.id
Ref: TaskStatusHistory.from_status_id > Status.id
Ref: TaskStatusHistory.to_status_id > Status.id
Ref: TaskStatusHistory.changed_by > User.id